fixed missing figure legends

--- a/_main.tex
+++ b/_main.tex
@@ -72,7 +72,8 @@
 \usepackage[default]{cantarell} 
 \usepackage{fontspec}
 \usepackage{booktabs}
-\usepackage{longtable}
+%\usepackage{longtable}
+\usepackage{xtab}
 \usepackage{colortbl}
 \usepackage{siunitx}
 \usepackage{framed}
@@ -180,20 +181,6 @@
   \thm@postskip=\thm@preskip
 }
 \makeatother
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 
 \title{Text For Biology at Roxbury Community College}
 \author{Assembled by Nikolaus Sucher}
