--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -3,7 +3,8 @@
 \usepackage[default]{cantarell} 
 \usepackage{fontspec}
 \usepackage{booktabs}
-\usepackage{longtable}
+%\usepackage{longtable}
+\usepackage{xtab}
 \usepackage{colortbl}
 \usepackage{siunitx}
 \usepackage{framed}
