--- a/pdf/good_main.tex
+++ b/pdf/good_main.tex
@@ -3771,14 +3771,14 @@ Sexual reproduction is a biological process that creates a new organism by combi
 
 
 
-\begin{figure}
-
-{\centering \includegraphics[width=0.7\linewidth]{./figures/reproduction/Sperm-egg} 
-
-}
-
-\caption{\href{https://commons.wikimedia.org/wiki/File:Sperm-egg.jpg}{Sperm fertilizing an egg.}}\label{fig:spermfertilizingegg}
-\end{figure}
+%\begin{figure}
+%
+%{\centering \includegraphics[width=0.7\linewidth]{./figures/reproduction/Sperm-egg} 
+%
+%}
+%
+%\caption{\href{https://commons.wikimedia.org/wiki/File:Sperm-egg.jpg}{Sperm fertilizing an egg.}}\label{fig:spermfertilizingegg}
+%\end{figure}
 
 \hypertarget{meiosis}{%
 \section{Meiosis}\label{meiosis}}
