--- a/systematics.rmd
+++ b/systematics.rmd
@@ -1,6 +1,6 @@
 # Taxonomy, Binomial Nomenclature And Systematics
 
-Taxonomy is the identification, naming and classification of organisms. Binomial nomenclature is a formal system of naming species of living things by giving each a name composed of two parts. Systematics is the branch of science that deals with unique properties of species and groups to recognise, describe name and arrange the diverse organisms according to an organised plan. In biology, phylogenetics (Greek: φυλή, φῦλον – phylé, phylon = tribe, clan, race + γενετικός – genetikós = origin, source, birth) is a part of systematics that addresses the inference of the evolutionary history and relationships among or within groups of organisms (e.g. species, or more inclusive taxa). Classifications are now usually based on phylogenetic data. The degree to which classification depends on inferred evolutionary history differs depending on the school of taxonomy: phenetics ignores phylogenetic speculation altogether, trying to represent the similarity between organisms instead; cladistics (phylogenetic systematics) tries to reflect phylogeny in its classifications by only recognizing groups based on shared, derived characters (synapomorphies); evolutionary taxonomy tries to take into account both the branching pattern and "degree of difference" to find a compromise between them.
+[Taxonomy](https://en.wikipedia.org/wiki/Taxonomy_(biology)) is the identification, naming and classification of organisms. [Binomial nomenclature](https://en.wikipedia.org/wiki/Binomial_nomenclature) is a formal system of naming species of living things by giving each a name composed of two parts. [Systematics](https://en.wikipedia.org/wiki/Systematics) is the branch of science that deals with unique properties of species and groups to recognise, describe name and arrange the diverse organisms according to an organised plan. In biology, phylogenetics (Greek: φυλή, φῦλον – phylé, phylon = tribe, clan, race + γενετικός – genetikós = origin, source, birth) is a part of systematics that addresses the inference of the evolutionary history and relationships among or within groups of organisms (e.g. species, or more inclusive taxa). Classifications are now usually based on phylogenetic data. The degree to which classification depends on inferred evolutionary history differs depending on the school of taxonomy: phenetics ignores phylogenetic speculation altogether, trying to represent the similarity between organisms instead; cladistics (phylogenetic systematics) tries to reflect phylogeny in its classifications by only recognizing groups based on shared, derived characters (synapomorphies); evolutionary taxonomy tries to take into account both the branching pattern and "degree of difference" to find a compromise between them.
 
 Biological classification is a critical component of the taxonomic process. As a result, it informs the user as to what the relatives of the taxon are hypothesized to be. Biological classification uses taxonomic ranks, including among others (in order from most inclusive to least inclusive): Domain, Kingdom, Phylum, Class, Order, Family, Genus, and Species
 
@@ -22,7 +22,7 @@ The initial description of a taxon involves five main requirements:
 
 However, often much more information is included, like the geographic range of the taxon, ecological notes, chemistry, behavior, etc. How researchers arrive at their taxa varies: depending on the available data, and resources, methods vary from simple quantitative or qualitative comparisons of striking features, to elaborate computer analyses of large amounts of DNA sequence data.
 
-An "authority" may be placed after a scientific name. The authority is the name of the scientist or scientists who first validly published the name. For example, in 1758 Linnaeus gave the Asian elephant the scientific name Elephas maximus, so the name is sometimes written as "Elephas maximus Linnaeus, 1758". The names of authors are frequently abbreviated: the abbreviation L., for Linnaeus, is commonly used. In botany, there is, in fact, a regulated list of standard abbreviations (see list of botanists by author abbreviation). The system for assigning authorities differs slightly between botany and zoology. However, it is standard that if a species' name or placement has been changed since the original description, the original authority's name is placed in parentheses.
+An "authority" may be placed after a scientific name. The authority is the name of the scientist or scientists who first validly published the name. For example, in 1758 Linnaeus gave the Asian elephant the scientific name *Elephas maximus*, so the name is sometimes written as "*Elephas maximus* Linnaeus, 1758". The names of authors are frequently abbreviated: the abbreviation L., for Linnaeus, is commonly used. In botany, there is, in fact, a regulated list of standard abbreviations (see list of botanists by author abbreviation). The system for assigning authorities differs slightly between botany and zoology. However, it is standard that if a species' name or placement has been changed since the original description, the original authority's name is placed in parentheses.
 
 (ref:tree) [The tree of life.](https://commons.wikimedia.org/wiki/File:CollapsedtreeLabels-simplified.svg)
 
@@ -62,7 +62,7 @@ The commonly used names for kinds of organisms are often ambiguous: "cat" could 
 
 Binomial nomenclature ("two-term naming system"), also called binominal nomenclature ("two-name naming system") or binary nomenclature, is a formal system of naming species of living things by giving each a name composed of two parts, both of which use Latin grammatical forms, although they can be based on words from other languages. Such a name is called a binomial name (which may be shortened to just "binomial"), a binomen, binominal name or a scientific name; more informally it is also called a Latin name.
 
-The first part of the name – the generic name – identifies the genus to which the species belongs, while the second part – the specific name or specific epithet – identifies the species within the genus. For example, humans belong to the genus Homo and within this genus to the species *Homo sapiens*. *Tyrannosaurus rex* is probably the most widely known binomial. The formal introduction of this system of naming species is credited to Carl Linnaeus, effectively beginning with his work Species Plantarum in 1753. But Gaspard Bauhin, in as early as 1622, had introduced in his book Pinax theatri botanici (English, Illustrated exposition of plants) many names of genera that were later adopted by Linnaeus.
+The first part of the name – the generic name – identifies the genus to which the species belongs, while the second part – the specific name or specific epithet – identifies the species within the genus. For example, humans belong to the genus *Homo* and within this genus to the species *Homo sapiens*. *Tyrannosaurus rex* is probably the most widely known binomial. The formal introduction of this system of naming species is credited to Carl Linnaeus, effectively beginning with his work Species Plantarum in 1753. But Gaspard Bauhin, in as early as 1622, had introduced in his book Pinax theatri botanici (English, Illustrated exposition of plants) many names of genera that were later adopted by Linnaeus.
 
 The application of binomial nomenclature is now governed by various internationally agreed codes of rules, of which the two most important are the International Code of Zoological Nomenclature (ICZN) for animals and the International Code of Nomenclature for algae, fungi, and plants (ICNafp). Although the general principles underlying binomial nomenclature are common to these two codes, there are some differences, both in the terminology they use and in their precise rules.
 
@@ -81,9 +81,9 @@ Prior to the adoption of the modern binomial system of naming species, a scienti
 
 Such "polynomial names" may sometimes look like binomials, but are significantly different. For example, Gerard's herbal (as amended by Johnson) describes various kinds of spiderwort: "The first is called *Phalangium ramosum*, Branched Spiderwort; the second, *Phalangium non ramosum*, Unbranched Spiderwort. The other ... is aptly termed Phalangium Ephemerum Virginianum, Soon-Fading Spiderwort of Virginia". The Latin phrases are short descriptions, rather than identifying labels.
 
-The Bauhins, in particular Caspar Bauhin (1560–1624), took some important steps towards the binomial system, by pruning the Latin descriptions, in many cases to two words. The adoption by biologists of a system of strictly binomial nomenclature is due to Swedish botanist and physician Carl Linnaeus (1707–1778). It was in Linnaeus's 1753 Species Plantarum that he began consistently using a one-word "trivial name" (nomen triviale) after a generic name (genus name) in a system of binomial nomenclature. Trivial names had already appeared in his Critica Botanica (1737) and Philosophia Botanica (1751). This trivial name is what is now known as a specific epithet (ICNafp) or specific name (ICZN). The Bauhins' genus names were retained in many of these, but the descriptive part was reduced to a single word.
+The Bauhins, in particular [Caspar Bauhin](https://en.wikipedia.org/wiki/Gaspard_Bauhin) (1560–1624), took some important steps towards the binomial system, by pruning the Latin descriptions, in many cases to two words. The adoption by biologists of a system of strictly binomial nomenclature is due to Swedish botanist and physician Carl Linnaeus (1707–1778). It was in Linnaeus's 1753 Species Plantarum that he began consistently using a one-word "trivial name" (nomen triviale) after a generic name (genus name) in a system of binomial nomenclature. Trivial names had already appeared in his Critica Botanica (1737) and Philosophia Botanica (1751). This trivial name is what is now known as a specific epithet (ICNafp) or specific name (ICZN). The Bauhins' genus names were retained in many of these, but the descriptive part was reduced to a single word.
 
-Linnaeus's trivial names introduced an important new idea, namely that the function of a name could simply be to give a species a unique label. This meant that the name no longer need be descriptive; for example both parts could be derived from the names of people. Thus Gerard's Phalangium ephemerum virginianum became Tradescantia virginiana, where the genus name honoured John Tradescant the Younger,[note 1] an English botanist and gardener. A bird in the parrot family was named Psittacus alexandri, meaning "Alexander's parrot", after Alexander the Great, whose armies introduced eastern parakeets to Greece. Linnaeus's trivial names were much easier to remember and use than the parallel polynomial names and eventually replaced them.
+Linnaeus's trivial names introduced an important new idea, namely that the function of a name could simply be to give a species a unique label. This meant that the name no longer need be descriptive; for example both parts could be derived from the names of people. Thus Gerard's *Phalangium ephemerum virginianum* became *Tradescantia virginiana*, where the genus name honoured [John Tradescant the Younger](https://en.wikipedia.org/wiki/John_Tradescant_the_Younger), an English botanist and gardener. A bird in the parrot family was named *Psittacus alexandri*, meaning "Alexander's parrot", after Alexander the Great, whose armies introduced eastern parakeets to Greece. Linnaeus's trivial names were much easier to remember and use than the parallel polynomial names and eventually replaced them.
 
 The value of the binomial nomenclature system derives primarily from its economy, its widespread use, and the uniqueness and stability of names it generally favors:
 
@@ -101,11 +101,11 @@ A complete binomial name is always treated grammatically as if it were a phrase 
 * Latin, either classical or medieval. Thus, both parts of the binomial name *Homo sapiens* are Latin words, meaning "wise" (sapiens) "human/man" (Homo).
 * Classical Greek. The genus *Rhododendron* was named by Linnaeus from the Greek word ῥοδόδενδρον, itself derived from rhodon, "rose", and dendron, "tree". Greek words are often converted to a Latinized form. Thus coca (the plant from which cocaine is obtained) has the name *Erythroxylum coca*. *Erythroxylum* is derived from the Greek words erythros, red, and xylon, wood. The Greek neuter ending -ον (-on) is often converted to the Latin neuter ending -um.
 * Other languages. The second part of the name *Erythroxylum coca* is derived from kuka, the name of the plant in Aymara and Quechua. Since many dinosaur fossils were found in Mongolia, their names often use Mongolian words, e.g. Tarchia from tarkhi, meaning "brain", or Saichania meaning "beautiful one".
-* Names of people (often naturalists or biologists). The name *Magnolia campbellii* commemorates two people: Pierre Magnol, a French botanist, and Archibald Campbell, a doctor in British India.
+* Names of people (often naturalists or biologists). The name *Magnolia campbellii* commemorates two people: [Pierre Magnol](https://en.wikipedia.org/wiki/Pierre_Magnol), a French botanist, and [Archibald Campbell](https://en.wikipedia.org/wiki/Archibald_Campbell_(doctor)), a doctor in British India.
 * Names of places. The lone star tick, *Amblyomma americanum*, is widespread in the United States.
 * Other sources. Some binominal names have been constructed from taxonomic anagrams or other re-orderings of existing names. Thus the name of the genus *Muilla* is derived by reversing the name *Allium*. Names may also be derived from jokes or puns. For example, Ratcliffe described a number of species of rhinoceros beetle, including *Cyclocephala nodanotherwon*.
 
-The first part of the name, which identifies the genus, must be a word which can be treated as a Latin singular noun in the nominative case. It must be unique within each kingdom, but can be repeated between kingdoms. Thus Huia recurvata is an extinct species of plant, found as fossils in Yunnan, China, whereas Huia masonii is a species of frog found in Java, Indonesia.
+The first part of the name, which identifies the genus, must be a word which can be treated as a Latin singular noun in the nominative case. It must be unique within each kingdom, but can be repeated between kingdoms. Thus *Huia recurvata* is an extinct species of plant, found as fossils in Yunnan, China, whereas *Huia masonii* is a species of frog found in Java, Indonesia.
 
 The second part of the name, which identifies the species within the genus, is also treated grammatically as a Latin word. It can have one of a number of forms:
 
@@ -121,7 +121,7 @@ Whereas the first part of a binomial name must be unique within a kingdom, the s
 
 Systematics is the branch of science that deals with unique properties of species and groups to recognise, describe name and arrange the diverse organisms according to an organised plan. The word systematics is derived from Latin word systema which means systematic arrangement of organisms.linneous used 'systema naturae' as the title of his book.
 
-The term "taxonomy" was coined by Augustin Pyramus de Candolle while the term "systematic" was coined by Carl Linnaeus the father of taxonomy.
+The term "taxonomy" was coined by [Augustin Pyramus de Candolle](https://en.wikipedia.org/wiki/Augustin_Pyramus_de_Candolle) while the term "systematic" was coined by Carl Linnaeus the father of taxonomy.
 
 Biological systematics is the study of the diversification of living forms, both past and present, and the relationships among living things through time. Relationships are visualized as evolutionary trees (synonyms: cladograms, phylogenetic trees, phylogenies). Phylogenies have two components: branching order (showing group relationships) and branch length (showing amount of evolution). Phylogenetic trees of species and higher taxa are used to study the evolution of traits (e.g., anatomical or molecular characteristics) and the distribution of organisms (biogeography). Systematics, in other words, is used to understand the evolutionary history of life on Earth.
 
@@ -152,11 +152,11 @@ Prefixes can be added so subkingdom (subregnum) and infrakingdom (also known as 
 
 Some recent classifications based on modern cladistics have explicitly abandoned the term "kingdom", noting that the traditional kingdoms are not monophyletic, i.e., do not consist of all the descendants of a common ancestor.
 
-By tradition, the binomial names of species are usually typeset in italics; for example, Homo sapiens. Generally, the binomial should be printed in a font style different from that used in the normal text; for example, "Several more *Homo sapiens* fossils were discovered." When handwritten, a binomial name should be underlined; for example, Homo sapiens.
+By tradition, the binomial names of species are usually typeset in italics; for example, *Homo sapiens*. Generally, the binomial should be printed in a font style different from that used in the normal text; for example, "Several more *Homo sapiens* fossils were discovered." When handwritten, a binomial name should be underlined; for example, *Homo sapiens*.
 
-The first part of the binomial, the genus name, is always written with an initial capital letter. In current usage, the second part is never written with an initial capital. Older sources, particularly botanical works published before the 1950s, use a different convention. If the second part of the name is derived from a proper noun, e.g. the name of a person or place, a capital letter was used. Thus the modern form Berberis darwinii was written as Berberis Darwinii. A capital was also used when the name is formed by two nouns in apposition, e.g. Panthera Leo or Centaurea Cyanus.[note 3]
+The first part of the binomial, the genus name, is always written with an initial capital letter. In current usage, the second part is never written with an initial capital. Older sources, particularly botanical works published before the 1950s, use a different convention. If the second part of the name is derived from a proper noun, e.g. the name of a person or place, a capital letter was used. Thus the modern form Berberis darwinii was written as Berberis Darwinii. A capital was also used when the name is formed by two nouns in apposition, e.g. *Panthera Leo* or *Centaurea Cyanus*.
 
-When used with a common name, the scientific name often follows in parentheses, although this varies with publication. For example, "The house sparrow (Passer domesticus) is decreasing in Europe."
+When used with a common name, the scientific name often follows in parentheses, although this varies with publication. For example, "The house sparrow (*Passer domesticus*) is decreasing in Europe."
 
 The binomial name should generally be written in full. The exception to this is when several species from the same genus are being listed or discussed in the same paper or report, or the same species is mentioned repeatedly; in which case the genus is written in full when it is first used, but may then be abbreviated to an initial (and a period/full stop). For example, a list of members of the genus Canis might be written as "Canis lupus, C. aureus, C. simensis". In rare cases, this abbreviated form has spread to more general use; for example, the bacterium Escherichia coli is often referred to as just E. coli, and Tyrannosaurus rex is perhaps even better known simply as T. rex, these two both often appearing in this form in popular writing even where the full genus name has not already been given.
 
