--- a/pdf/preamble.tex
+++ b/pdf/preamble.tex
@@ -29,7 +29,8 @@
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
-\usepackage{longtable,booktabs}
+%\usepackage{longtable,booktabs}
+%\usepackage{xtab,booktabs}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -105,7 +106,8 @@
 %\setsansfont{Linux Biolinum O}
 \usepackage[greek.polutoniko,english]{babel}
 \usepackage{booktabs}
-\usepackage{longtable}
+\usepackage{xtab}
+%\usepackage{longtable}
 \usepackage{siunitx}
 \usepackage{framed}
 \usepackage{multirow}
@@ -246,3 +248,27 @@
 \usepackage{tocloft}
 \cftsetindents{section}{1em}{3em}
 \cftsetindents{figure}{1em}{3em}
+
+
+
+%\makeatletter
+%\let\oldlt\longtable
+%\let\endoldlt\endlongtable
+%\def\longtable{\@ifnextchar[\longtable@i \longtable@ii}
+%\def\longtable@i[#1]{\begin{figure}[t]
+%\onecolumn
+%\begin{minipage}{0.5\textwidth}
+%\oldlt[#1]
+%}
+%\def\longtable@ii{\begin{figure}[t]
+%\onecolumn
+%\begin{minipage}{0.5\textwidth}
+%\oldlt
+%}
+%\def\endlongtable{\endoldlt
+%\end{minipage}
+%\twocolumn
+%\end{figure}}
+%\makeatother
+
+
